# NM-MCP

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
integration/: api_client.py  conftest.py  e2e_server.py  fit_scorer.py  nl_mapping.py  phase2_apis.py  storage.py
src/narajangteo_pro/: config.py  server.py  setup_wizard.py
src/narajangteo_pro/analytics/: fit_scorer.py  market.py
src/narajangteo_pro/api/: award.py  bid.py  client.py  contract.py  lifecycle.py  request.py  shopping.py
src/narajangteo_pro/storage/: db.py
src/narajangteo_pro/utils/: nl_mapping.py
